fixed bugs on iOS devices

--- a/css/style.css
+++ b/css/style.css
@@ -9,11 +9,6 @@
   src: url(../font/SourceSansPro-Regular.otf);
 }
 
-* {
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  user-select: none;
-}
 body {
   font-family: "Source Sans Pro", sans-serif;
   margin: 0 auto;
@@ -344,6 +339,8 @@ h1 {
   font-family: 'Fira Code', monospace;
   background-color: #373a33;
   color: white;
+  border-radius: 0;
+  margin: 0;
   width: 100%;
   border-width: 0;
   box-sizing: border-box;
